# ParaBank-Automation

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: users.yaml
libraries/: faker.py
resources/: api.resource  common.resource  variables.resource
resources/pages/: account_page.resource  home_page.resource  login_sign_up.resource  login_signup.resource
results/: log.html  output.xml  playwright-log.txt  report.html
tests/: APITest_suite.robot  api_suite.robot  e2e_suite.robot  functional_negative_suite.robot  playwrightexample.robot  signup.robot
