[project]
name = "e-commerce-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "robotframework>=7.4.1",
    "robotframework-browser>=19.12.4",
    "robotframework-requests>=0.9.7",
]

[tool.uv.workspace]
members = [
    "robotframework",
    "e-commerce-automation",
]
